--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ CONTACT_EMAIL=your-email@gmail.com
 # 2. Replace the values with your actual credentials
 # 3. For Gmail: Enable 2FA and generate an App Password at https://myaccount.google.com/apppasswords
 # 4. Never commit .env.local to git
+
+# Cloudinary Configuration for image uploads
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
