--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "googleapis": "^162.0.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^7.0.0",
     "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "node-domexception": "^2.0.2",
